cmake_minimum_required(VERSION 3.10)
project(ROB305-ConceptionMultitaches)

# Set the source and build directories
set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)


# Add subdirectories for each tp folder
add_subdirectory(tp1)
#add_subdirectory(tp2)
#add_subdirectory(tp3)
#add_subdirectory(tp4)
#add_subdirectory(tp5)