cmake_minimum_required(VERSION 3.25)
project(ROB305-ConceptionMultitaches)


# Set the source and build directories
set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)


# Add subdirectories for each tp folder
add_subdirectory(Tp1)
add_subdirectory(Tp2)
add_subdirectory(Tp3)
add_subdirectory(Tp4)
add_subdirectory(Tp5)